kubernetes/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        # AQUÍ ESTÁ LA CLAVE: Tu imagen de Docker Hub
        image: mortviva7/portfolio:v1
        ports:
        - containerPort: 80
        imagePullPolicy: Always
